objects/MMPJ_TOPG_RAID__c.object
<CustomObject>
    <description>Used for MMPJ TopGun app</description>
    <fields>
        <fullName>MMPJ_TOPG_Brand__c</fullName>
        <description>Used for the TOP GUN Project</description>
        <label>Brand</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>To be completed</fullName>
                </value>
                <value>
                    <fullName>Mumm</fullName>
                </value>
                <value>
                    <fullName>Martell</fullName>
                </value>
                <value>
                    <fullName>Perrier-Jouet</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MMPJ_TOPG_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Responsible</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>RAIDs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MMPJ_TOPG_Desc__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used for the TOP GUN Project</description>
        <label>Desc.</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MMPJ_TOPG_Description__c</fullName>
        <description>Used for the TOP GUN Project</description>
        <label>Description</label>
        <length>20000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>MMPJ_TOPG_ExpectedDate__c</fullName>
        <description>Used for the TOP GUN Project</description>
        <label>Expected date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MMPJ_TOPG_Flag__c</fullName>
        <description>Used for the TOP GUN Project</description>
        <formula>IF ( ISPICKVAL(MMPJ_TOPG_Status__c , &apos;Done&apos;), &quot;done_smiley&quot;, IF (ISPICKVAL(MMPJ_TOPG_Status__c , &apos;On Going&apos;), &quot;ongoing_smiley&quot; , IF (ISPICKVAL(MMPJ_TOPG_Status__c , &apos;Late&apos;), &quot;late_smiley&quot; , &quot;planned_smiley&quot;)))</formula>
        <label>Flag</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MMPJ_TOPG_Highlight__c</fullName>
        <defaultValue>false</defaultValue>
        <description>used for the TOP GUN Project</description>
        <label>Highlight</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MMPJ_TOPG_LineItem__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MoM Line Item</label>
        <referenceTo>MMPJ_TOPG_MoMLineItem__c</referenceTo>
        <relationshipName>RAIDs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MMPJ_TOPG_Market__c</fullName>
        <description>Used for the TOP GUN Project</description>
        <label>Market</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>To be completed</fullName>
                </value>
                <value>
                    <fullName>UK</fullName>
                </value>
                <value>
                    <fullName>France</fullName>
                </value>
                <value>
                    <fullName>China</fullName>
                </value>
                <value>
                    <fullName>California</fullName>
                </value>
                <value>
                    <fullName>Washington</fullName>
                </value>
                <value>
                    <fullName>Germany</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MMPJ_TOPG_Meeting__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used for the TOP GUN Project</description>
        <label>Meeting</label>
        <referenceTo>MMPJ_TOPG_Meeting__c</referenceTo>
        <relationshipName>RAIDs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MMPJ_TOPG_Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used for the TOP GUN Project</description>
        <label>Project --</label>
        <referenceTo>MMPJ_TOPG_Project__c</referenceTo>
        <relationshipName>RAIDs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MMPJ_TOPG_RAID__c</fullName>
        <description>Used for the TOP GUN Project</description>
        <label>RAID</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Risk</fullName>
                </value>
                <value>
                    <fullName>Action</fullName>
                </value>
                <value>
                    <fullName>Insight</fullName>
                </value>
                <value>
                    <fullName>Decision</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MMPJ_TOPG_Rank__c</fullName>
        <description>Sorting the related list on Project</description>
        <label>MMPJ_TOPG_Rank</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MMPJ_TOPG_Responsible__c</fullName>
        <description>Used for the TOP GUN Project</description>
        <label>Responsible</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MMPJ_TOPG_Status__c</fullName>
        <description>Used for the TOP GUN Project</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Planned</fullName>
                    <default>true</default>
                    <label>Planned</label>
                </value>
                <value>
                    <fullName>On Going</fullName>
                </value>
                <value>
                    <fullName>Done</fullName>
                </value>
                <value>
                    <fullName>Late</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MMPJ_TOPG_TechEmail__c</fullName>
        <label>Responsible&apos;s Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>MMPJ_TOPG_TechEndDate__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MMPJ_TOPG_TechStartDate__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MMPJ_TOPG_Tech_FocusDate__c</fullName>
        <description>Used in Cockpit Interactions</description>
        <label>Tech_FocusDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MMPJ_TOPG_Title__c</fullName>
        <description>Used for the TOP GUN Project</description>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MMPJ_TOPG_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Responsible</label>
        <referenceTo>User</referenceTo>
        <relationshipName>RAIDs</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>RAID</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>MMPJ_TOPG_Title__c</columns>
        <columns>MMPJ_TOPG_LineItem__c</columns>
        <columns>MMPJ_TOPG_Meeting__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>RAID{000000}</displayFormat>
        <label>RAID Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RAIDs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>